<resources>
    <string name="app_name">Find-Yours-Pets</string>

    <string name="action_settings">Settings</string>
    <string name="title" translatable="false">Find Your Pets</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="connectionText">Connection</string>
    <string name="registerText">Register</string>
    <string name="title_activity_registration">Registration</string>
    <string name="passwordConfirmation">Password Confirmation</string>
    <string name="mail">Mail</string>
    <string name="registrationText">Registration</string>
    <string name="phone">Phone</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="successConnection">You are connected</string>
    <string name="failureConnection">Failed connection</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_add_animal">Add Animal</string>
    <string name="name">Name</string>
    <string name="addAnimal">Add Animal</string>
    <string name="type">Type</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>
    <string name="catsFriend">Cats agreements</string>
    <string name="dogsAgreements">Dogs agreements</string>
    <string name="childrenAgreements">Children agreements</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="title_activity_animal">Animal</string>
    <string name="modify">Modify</string>
    <string name="adoption">Adoption</string>
    <string name="adopted">Adopted</string>
    <string name="title_activity_camera">Take a picture</string>

    <string name="capture">Capture</string>
    <string name="title_activity_shelters">Shelters</string>
    <string name="animalAdded">Animal added</string>
    <string name="successUpdateAnimalStatus">Animal\'s status successfully updated</string>
    <string name="title_activity_add_shelter">Add shelter</string>

    <string name="addShelter">Add Shelter</string>
    <string name="operationalHours">Operational hours</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="street">Street</string>
    <string name="shelterAdded">Shelter added</string>
    <string name="title_activity_user_profile">User profile</string>
    <string name="title_activity_shelter">ShelterActivity</string>
    <string name="title_activity_file_explorer">File explorer</string>
    <string name="photoConfirmation">Do you want to send this picture online ?</string>

    <string name="title_activity_update_user_profile">Update profile</string>
    <string name="modifyProfile">Update profile</string>
    <string name="photoSelectionMessage">Choose your selection mode</string>
    <string name="photoSelectionTitle">Selection mode</string>
    <string name="fileExplorerButton">File explorer</string>
    <string name="cameraButton">Camera</string>
    <string name="followAnimal">You follow this animal</string>
    <string name="unfollowAnimal">You are no longer following this animal</string>
    <string name="facebook_app_id">1702801843282822</string>
    <string name="title_activity_facebook_login">Facebook Login</string>
    <string name="myAnimalsTitle">My animals</string>
    <string name="shareOnFacebook">Share on Facebook</string>
    <string name="website">Website</string>
    <string name="uploadSuccess">Image uploaded</string>
    <string name="uploadFail">Failed to upload</string>
    <string name="comment">Comment</string>
    <string name="disconnection">Disconnection</string>
    <string name="call">Call</string>
    <string name="seeMore">See more news</string>
    <string name="title_activity_animal_news">Animal News</string>
    <string name="title_activity_search_animal">Find animal</string>
    <string name="search">Search</string>
    <string name="homelessAnimals">Homeless animals</string>
    <string name="addNews">Add news</string>
    <string name="title_activity_animal_add_news">Adding news</string>
    <string name="owner">Owner</string>
    <string name="title_activity_pets_preferences">Pets Preferences</string>
    <string name="save">Save</string>
    <string name="preferencesModified">Preferences have been modified</string>
    <string name="tweet">Tweet</string>
    <string name="title_activity_animal_message">Sending message</string>
    <string name="shelterContact">Contact the shelter</string>
    <string name="sendMessage">Send message</string>
    <string name="messageSent">Message sent</string>
    <string name="interestedOnAnimal">I am interested</string>
    <string name="animals">Animals</string>
    <string name="discoverOurAnimals">Discover our animals</string>
    <string name="comments">Comments</string>
    <string name="seeAllAnimals">See all animals</string>
    <string name="title_activity_shelter_animals">Shelter\'s animals</string>
    <string name="seeAllComments">See all comments</string>
    <string name="title_activity_shelter_comments">Shelter\'s opinions</string>
    <string name="chooseOwnerFromUsers">Choose animal\'s owner from application\'s users if exists</string>
    <string name="title_activity_shelters_adopted_animals">Shelter\'s adopted animals</string>
    <string name="seeAllAdoptedAnimals">See all adopted animals</string>
    <string name="deleteAnimal">Delete</string>
    <string name="followedAnimals">Followed animals</string>
    <string name="suggestedAnimals">Suggested animals</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="followShelter">You follow this shelter</string>
    <string name="unfollowShelter">You are no longer following this shelter</string>
    <string name="title_activity_message_activuty">Message</string>
    <string name="from">From</string>
    <string name="animal">Animal</string>
    <string name="title_activity_shelter_messages">Shelter\'s messages</string>
    <string name="seeMessages">See messages</string>
    <string name="date">Date</string>
    <string name="favorite">Favorite</string>
    <string name="emptyMessage">Message is empty</string>
    <string name="notifications">Notifications</string>
    <string name="emptyComment">Comment is empty</string>
    <string name="chooseAdministratorFromUsers">Choose shelter\'s administrator</string>
    <string name="administratorAdded">Administrator correctly added</string>
    <string name="addAdmin">Add administrator</string>
</resources>
