<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_animals" android:title="@string/title_activity_home"
        android:icon="@drawable/home" android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_shelters" android:title="@string/title_activity_shelters"
        android:icon="@drawable/animals" android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_user_profile" android:title="@string/title_activity_user_profile"
        android:icon="@drawable/animals" android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
