<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="company.pepisha.find_yours_pets.AddAnimalActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/addAnimal"
        android:id="@+id/addAnimal"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_centerHorizontal="true" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_row="0"
            android:layout_column="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/labelName" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/animalName"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"

            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/animalTypeRow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:id="@+id/type" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroupAnimalTypes" >


            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"

            android:layout_row="2"
            android:layout_column="0"
            android:id="@+id/animalSexeRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:id="@+id/sex" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroupAnimalSexe" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/female" />

            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_row="3"
            android:layout_column="0"
           >

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breed" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/breedAnimal"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_row="4"
            android:layout_column="0"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/ageAnimal"
                android:layout_weight="1" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_row="5"
            android:layout_column="0"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catsFriend"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/catsFriend"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_row="6"
            android:layout_column="0"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dogsAgreements"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/dogsAgreements"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_row="7"
            android:layout_column="0"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/childrenAgreements"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/childrenAgreements"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"

            android:layout_row="8"
            android:layout_column="0"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/description"
                android:layout_weight="1" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_row="10"
            android:layout_column="0">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shareOnFacebook"
                android:id="@+id/checkBoxFacebook" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_row="11"
            android:layout_column="0">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:id="@+id/addAnimalButton"
                 />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_row="12"
            android:layout_column="0">

        </TableRow>


    </GridLayout>

    </ScrollView>


</RelativeLayout>
