<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="company.pepisha.find_yours_pets.RegistrationActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:id="@+id/layout"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title"
                android:id="@+id/title"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.06"
                android:textSize="30dp" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:useDefaultMargins="true"
                android:id="@+id/connectionLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:id="@+id/nicknameLabel"
                    android:textIsSelectable="false"
                    android:layout_row="1"
                    android:layout_column="0"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nickname"
                    android:ems="10"
                    android:layout_gravity="center_horizontal"
                    android:layout_row="1"
                    android:layout_column="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:id="@+id/passwordLabel"
                    android:layout_row="2"
                    android:layout_column="0"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:layout_gravity="center_horizontal"
                    android:layout_row="2"
                    android:layout_column="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordConfirmation"
                    android:id="@+id/passwordConfirmationLabel"
                    android:layout_row="3"
                    android:layout_column="0"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordConfirmation"
                    android:layout_row="3"
                    android:layout_column="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mail"
                    android:id="@+id/mailLabel"
                    android:layout_row="4"
                    android:layout_column="0"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/mail"
                    android:layout_row="4"
                    android:layout_column="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:id="@+id/phoneLabel"
                    android:layout_row="5"
                    android:layout_column="0"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|phone"
                    android:ems="10"
                    android:id="@+id/phone"
                    android:layout_row="5"
                    android:layout_column="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstname"
                    android:id="@+id/firstnameLabel"
                    android:layout_row="6"
                    android:layout_column="0"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/firstname"
                    android:layout_gravity="center_horizontal"
                    android:layout_row="6"
                    android:layout_column="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname"
                    android:id="@+id/lastnameLabel"
                    android:layout_row="7"
                    android:layout_column="0"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/lastname"
                    android:layout_gravity="center_horizontal"
                    android:layout_row="7"
                    android:layout_column="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrationText"
                    android:id="@+id/registrationButton"
                    android:background="@drawable/button_green_style"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="0dp"
                    android:layout_row="8"
                    android:layout_column="1"/>

            </GridLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
